# nbib-rs

./: Cargo.toml  README.md
src/: groupby.rs  lib.rs  tags.rs  transforms.rs  types.rs
tests/: fade.json  fade.nbib
