[package]
name = "nbib"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["James S. Blachly, MD <james.blachly@gmail.com>", "Charles Thomas Gregory <charles.gregory940@topper.wku.edu>"]
repository = "https://github.com/blachlylab/nbib-rs/"
categories = ["parser-implementations", "science"]
description = "MEDLINE/Pubmed .nbib format to CSL-JSON conversion"
readme = "README.md"

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }